--- a/homePageStyling.css
+++ b/homePageStyling.css
@@ -16,15 +16,17 @@ h1 {
 
 h2 {
     font-size: 3rem;
-    margin: 4%;
+    margin-left: 4%;
     color: rgb(44, 44, 44);
     font-family: 'Kalam', cursive;
     font-weight: 400;
+    margin-bottom: 0;
 }
 
 h3 {
+    margin-top: 1.3%;
     font-size: 2.5rem;
-    margin: 4%;
+    margin-left: 4%;
     color: rgb(44, 44, 44);;
     font-family: 'Kalam', cursive;
     font-weight: 400;
